# undermine

./: .gitignore  CMakeLists.txt  DESIGN.md  MOLESCRIPT-original.md  MOLESCRIPT.md  README.md  TODO.md  cheat-sheet.md  molescript-human-readme.md
.github/workflows/: ci.yml
bots/: cautious.mole  glm5.2.mole  greedy.mole  highroad.mole  kimi2.mole  manus.mole  sol.mole
src/: bot1.c  bot1.h  bot2.c  bot2.h  filedlg.c  filedlg.h  main.c  mole.c  mole.h  sim.c  sim.h  synth.c  synth.h
